@startuml
class Lärare {
    + Anställningsår : string <<get>> <<set>>
    + Ämnen : string <<get>> <<set>>
    + VisaInfoLärare() : void
}
Person <|-- Lärare
class Person {
    + Namn : string <<get>> <<set>>
    + Mobil : string <<get>> <<set>>
    + <<virtual>> VisaInfo() : void
}
class Program {
    {static} Main(args:string[]) : void
}
class Student {
    + Årskurs : string <<get>> <<set>>
    + Program : string <<get>> <<set>>
    + <<override>> VisaInfo() : void
}
Person <|-- Student
@enduml
